# days_of_cod

./: README.md  pyproject.toml
api/: routers.py
api/controllers/: avatar.py
tests/controllers/: test_data_avatar.py  test_tradutor_google_sucess.py
